fix broken layout

--- a/htdocs/shared/css/style.css
+++ b/htdocs/shared/css/style.css
@@ -36,6 +36,7 @@ ul {
   width: 100%;
   z-index: 1;
   top: 0;
+  
 }
 
 .Header-container {
@@ -66,11 +67,13 @@ ul {
   width: 80%;
   margin: 0 auto;
   justify-content: space-between;
+  
 }
 
 .Header-container-top-logo {
   z-index: 2;
   padding: 20px 40px;
+  
 }
 
 .Header-container-top-logo__link {
@@ -90,6 +93,7 @@ ul {
   display: flex;
   padding: 30px 0px;
   height: 30px;
+ 
 }
 
 .Header-container-top-nav__link {
@@ -986,7 +990,7 @@ ul {
 
 .Quote-container {
   margin: auto;
-  width: 100%;
+  width: 80%;
 }
 
 .Quote-container-slider {
@@ -1069,6 +1073,13 @@ ul {
   }
   .Quote-container-slider-item-msg__author {
     font-size: 18px;
+  }
+  .Quote-container-slider-slick-prev {
+    display:none;
+  }
+  
+  .Quote-container-slider-slick-next {
+    display:none;
   }
 }
 
@@ -1959,7 +1970,7 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  z-index: 1001;
+  z-index: 5;
   width: 90%;
   max-width: 600px;
   border-radius: 8px;
@@ -1976,7 +1987,7 @@ ul {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 5;
+  z-index: 4;
   transition: opacity 0.3s ease;
   opacity: 0;
 }
